Editar y ver Titulo

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -23,10 +23,10 @@
  <!--   <add name="pjrdev_condominiosEntities" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VM3F99615\SQLEXPRESS01;initial catalog=pjrdev_condominios;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
   </connectionStrings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error/" redirectMode="ResponseRedirect">
+    <!--<customErrors mode="on" defaultRedirect="~/Error/" redirectMode="ResponseRedirect">
       <error statusCode="404" redirect="~/Error/NotFound" />
-      <!--<error statusCode="500" redirect="~/Error/Index" />-->
-    </customErrors>
+      <error statusCode="500" redirect="~/Error/Index" />
+    </customErrors>-->
     <trust level="Full" />
     <webParts>
       <personalization defaultProvider="MySQLPersonalizationProvider">
