--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -1101,6 +1101,7 @@
     <Content Include="Content\images\sort_desc.png" />
     <Content Include="Content\images\waiting-anim-gray.gif" />
     <Content Include="Content\images\waiting-anim-white.gif" />
+    <Content Include="Content\Select-Multiple.css" />
     <Content Include="Content\select2.min.css" />
     <Content Include="Content\tether\tether-theme-arrows-dark.css" />
     <Content Include="Content\tether\tether-theme-arrows-dark.min.css" />
@@ -1531,6 +1532,7 @@
     <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Select-Multiple.js" />
     <Content Include="Scripts\select2.full.min.js" />
     <Content Include="Scripts\tether.js" />
     <Content Include="Scripts\tether.min.js" />
