correciones carga del box de comunidades y blog

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -19,8 +19,8 @@
       </system.Web>
   -->
   <connectionStrings>
-     <!--<add name="pjrdev_condominiosEntities" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-PCJHIEB;Initial Catalog=pjrdev_condominios; integrated security=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-       <add name="pjrdev_condominiosEntities" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SOTILLOCOMPUTER;Initial Catalog=pjrdev_condominios;uid=sa;pwd=12345;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+     <add name="pjrdev_condominiosEntities" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-PCJHIEB;Initial Catalog=pjrdev_condominios; integrated security=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+       <!--<add name="pjrdev_condominiosEntities" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SOTILLOCOMPUTER;Initial Catalog=pjrdev_condominios;uid=sa;pwd=12345;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
  <!--<add name="pjrdev_condominiosEntities" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VM3F99615\SQLEXPRESS01;initial catalog=pjrdev_condominios;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
   </connectionStrings>
   <system.web>
