--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -499,7 +499,6 @@
     <Compile Include="Areas\webmaster\Controllers\paquetesController.cs" />
     <Compile Include="Areas\webmaster\Controllers\plantillasController.cs" />
     <Compile Include="Areas\webmaster\Controllers\suplidoresController.cs" />
-    <Compile Include="Areas\webmaster\Controllers\categoriasController.cs" />
     <Compile Include="Areas\webmaster\Controllers\tareasController.cs" />
     <Compile Include="Areas\webmaster\Controllers\tecnicoController.cs" />
     <Compile Include="Areas\webmaster\Controllers\temadeController.cs" />
@@ -1373,7 +1372,7 @@
     <Content Include="Areas\coadmin\Views\cargos\estado.cshtml" />
     <Content Include="Areas\coadmin\Views\cargos\historial.cshtml" />
     <Content Include="Areas\coadmin\Views\documentos\listado.cshtml" />
-    <Content Include="Areas\coadmin\Views\contacto\informacion.cshtml" />
+    <Content Include="Areas\coadmin\Views\contacto\agregar.cshtml" />
     <Content Include="Areas\coadmin\Views\titulares\editar.cshtml" />
     <Content Include="Areas\coadmin\Views\titulares\ver.cshtml" />
     <Content Include="Areas\coadmin\Views\suplidores\editar.cshtml" />
@@ -1523,9 +1522,9 @@
     <Content Include="Areas\coadmin\Views\titulares\verTitulo.cshtml" />
     <Content Include="Areas\coadmin\Views\titulares\verVehiculo.cshtml" />
     <Content Include="Areas\coadmin\Views\contacto\ver.cshtml" />
-    <Content Include="Areas\webmaster\Views\categorias\agregar.cshtml" />
-    <Content Include="Areas\webmaster\Views\categorias\editar.cshtml" />
-    <Content Include="Areas\webmaster\Views\categorias\listado.cshtml" />
+    <Content Include="Areas\webmaster\Views\suplidores\agregarCategoria.cshtml" />
+    <Content Include="Areas\webmaster\Views\suplidores\editarCategoria.cshtml" />
+    <Content Include="Areas\webmaster\Views\suplidores\listadoCategorias.cshtml" />
     <Content Include="Areas\coadmin\Views\cuotas\listadoCuentas.cshtml" />
     <Content Include="Areas\coadmin\Views\cuotas\editarCuenta.cshtml" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
