--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -1348,7 +1348,7 @@
     <Content Include="Areas\coadmin\Views\eventos\otros.cshtml" />
     <Content Include="Areas\coadmin\Views\eventos\agregar.cshtml" />
     <Content Include="Areas\coadmin\Views\eventos\inactivos.cshtml" />
-    <Content Include="Areas\coadmin\Views\documentos\categoria.cshtml" />
+    <Content Include="Areas\coadmin\Views\documentos\agregarCategoria.cshtml" />
     <Content Include="Areas\coadmin\Views\documentos\agregar.cshtml" />
     <Content Include="Areas\coadmin\Views\tareas\listado.cshtml" />
     <Content Include="Areas\coadmin\Views\tareas\agregar.cshtml" />
@@ -1380,7 +1380,7 @@
     <Content Include="Areas\coadmin\Views\suplidores\versuplidor.cshtml" />
     <Content Include="Areas\coadmin\Views\eventos\editar.cshtml" />
     <Content Include="Areas\coadmin\Views\documentos\editar.cshtml" />
-    <Content Include="Areas\coadmin\Views\documentos\editarcategoria.cshtml" />
+    <Content Include="Areas\coadmin\Views\documentos\editarCategoria.cshtml" />
     <Content Include="Areas\coadmin\Views\tareas\vertarea.cshtml" />
     <Content Include="Areas\coadmin\Views\tareas\editar.cshtml" />
     <Content Include="Areas\coadmin\Views\facilidades\editar.cshtml" />
@@ -1530,6 +1530,7 @@
     <Content Include="Areas\coadmin\Views\cuotas\editarCuenta.cshtml" />
     <Content Include="Areas\coadmin\Views\control\error.cshtml" />
     <Content Include="Areas\webmaster\Views\control\error.cshtml" />
+    <Content Include="Areas\coadmin\Views\documentos\listadoCategoria.cshtml" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Properties\PublishProfiles\Default Settings1.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
